welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:5: error: Invalid literal number
for (nbTours <- 1to 10) {
                ^Runner:16: error: ')' expected but '}' found.
	}
        ^