welcome.lessons.welcome.loopfor.LoopCourse.scala.code
//var nbCote = 0;
//var nbTours = 1;

for (nbTours <- 1to 10) {
	for (nbCote <- 1 to 4) {
		for (compteur <- 1 to 8) {
			avance();
		}
	gauche();
	//nbCote = nbCote + 1;	
	}
	//nbTours = nbTours + 1;
}